<?xml version="1.0" ?>
<package format="3">
  <name>ping360_msgs</name>
  <version>1.0.0</version> 
  <description>Messages for Ping360 Sonar</description>

  <!-- <url type="website">http://wiki.ros.org/ping360_sonar</url>
  <url type="repository">https://github.com/CentraleNantesRobotics/ping360_sonar.git</url>
  <url type="bugtracker">https://github.com/CentraleNantesRobotics/ping360_sonar/issues</url> -->

  <author>Olivier Kermorgant</author>
  <maintainer email="linzhao@uri.edu">Lin Zhao</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>

</package>
